--- a/.github/workflows/actionsflow.yml
+++ b/.github/workflows/actionsflow.yml
@@ -1,7 +1,7 @@
 name: Actionsflow
 on:
-  schedule:
-    - cron: "*/60 * * * *"
+  #schedule:
+  # - cron: "*/60 * * * *"
   push:
     branches:
       - main
